rusty-cdk-macros/tests/fails/missing_lambda_prefix.rs
use rusty_cdk_macros::lambda_permission_action;

fn example() {
    lambda_permission_action!("some:stuff");
}

fn main() {}